fixed title alignment

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -26,7 +26,4 @@
   background-clip:text;
   color:#000;
   -webkit-text-fill-color:transparent;
-  padding:15px;
-  width:90%;
-  max-width:70em  
 }
